--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           </ul>
         </p>
         <p><strong>The Investor: unknown</strong></p>
-        <p><strong>The Digital Dating Expert: Lori Cheek</strong>LoriArchitect turned Entrepreneur, Founder and CEO of <a href="cheekd.com">Cheekd.com</a> -- the reverse engineered dating site coined by the New York Times as "the next generation of online dating." Lori, recently listed on the American Express Open Forum as "The Digital Dating Disruptor" and "One of the Top 10 CEOs to Watch in 2013," was just featured on ABC's Shark Tank pitching her million dollar idea, Cheek'd, which makes introducing yourself to an intriguing stranger less intimidating by combining the charm of witty, old school calling cards with the power of the Internet.</p>
+        <p><strong>The Digital Dating Expert: Lori Cheek</strong>Architect turned Entrepreneur, Founder and CEO of <a href="cheekd.com">Cheekd.com</a> -- the reverse engineered dating site coined by the New York Times as "the next generation of online dating." Lori, recently listed on the American Express Open Forum as "The Digital Dating Disruptor" and "One of the Top 10 CEOs to Watch in 2013," was just featured on ABC's Shark Tank pitching her million dollar idea, Cheek'd, which makes introducing yourself to an intriguing stranger less intimidating by combining the charm of witty, old school calling cards with the power of the Internet.</p>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
