added c3s wolfang senges

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
               </div>
             </li>
             <li>
-              <div class='name'>Startup</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-              <div class='name'>tba</div>
+              <div class='name'>The License Specialist</div>
+              <div class='avatar' style="background-image: url('images/wolfgang.jpg')"></div>
+              <div class='name'>Wolfgang Senges</div>
               <div class='handle'>
-                <a href='http://twitter.com/anawesomestartup' target='_blank'>@anawesomestartup</a>
+                <a href='http://twitter.com/c3s' target='_blank'>@c3s</a>
               </div>
             </li>
             <li>
@@ -189,8 +189,9 @@
             </li>
           </ul>
         </p>
-        <p><strong>The Investor: unknown</strong></p>
+        <p><strong>The Investor: A Superawesome Investor!</strong></p>
         <p><strong>The Digital Dating Expert: Lori Cheek</strong>Architect turned Entrepreneur, Founder and CEO of <a href="cheekd.com">Cheekd.com</a> -- the reverse engineered dating site coined by the New York Times as "the next generation of online dating." Lori, recently listed on the American Express Open Forum as "The Digital Dating Disruptor" and "One of the Top 10 CEOs to Watch in 2013," was just featured on ABC's Shark Tank pitching her million dollar idea, Cheek'd, which makes introducing yourself to an intriguing stranger less intimidating by combining the charm of witty, old school calling cards with the power of the Internet.</p>
+        <p><strong>The License Specialist: Wolfang Senges</strong><a href="http://c3s.cc">The Cultural Commons Collecting Society (C3S)</a> is the next generation of music collecting societies. Open, fair, cross-border, enabling a new market. Embracing open tech and non-exclusive licensing: Creative Commons (some richts reserved) and all rights reserved licensing.</p>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
