--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
           <ul class='talks'>
             <li>
               <div class='name'>The Investor</div>
-              <div class='avatar' style="background-image: url('images/investor.gif')"></div>
-              <div class='name'>tba</div>
+              <div class='avatar' style="background-image: url('images/dai.jpeg')"></div>
+              <div class='name'>Dai Truong</div>
               <div class='handle'>
-                <a href='http://twitter.com/anawesomeinvestor' target='_blank'>@anawesomeinvestor</a>
+                <a href='http://twitter.com/dai_truong' target='_blank'>@dai_truong</a>
               </div>
             </li>
             <li>
@@ -189,7 +189,7 @@
             </li>
           </ul>
         </p>
-        <p><strong>The Investor: A Superawesome Investor!</strong></p>
+        <p><strong>The Investor: Dai Truong </strong> He joined <a href="http://www.austinventures.com/">Austin Ventures</a> in 2013 and focuses on early-stage and expansion-stage investing. Prior to joining AV, Dai was a Senior Analyst in the Technology Investment Banking group at Bank of America Merrill Lynch where he focused on Internet, digital media, software, hardware, communications equipment, and semiconductor companies.</p>
         <p><strong>The Digital Dating Expert: Lori Cheek</strong>Architect turned Entrepreneur, Founder and CEO of <a href="cheekd.com">Cheekd.com</a> -- the reverse engineered dating site coined by the New York Times as "the next generation of online dating." Lori, recently listed on the American Express Open Forum as "The Digital Dating Disruptor" and "One of the Top 10 CEOs to Watch in 2013," was just featured on ABC's Shark Tank pitching her million dollar idea, Cheek'd, which makes introducing yourself to an intriguing stranger less intimidating by combining the charm of witty, old school calling cards with the power of the Internet.</p>
         <p><strong>The License Specialist: Wolfang Senges</strong><a href="http://c3s.cc">The Cultural Commons Collecting Society (C3S)</a> is the next generation of music collecting societies. Open, fair, cross-border, enabling a new market. Embracing open tech and non-exclusive licensing: Creative Commons (some richts reserved) and all rights reserved licensing.</p>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
