added first prices

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </li>
           </ul>
         </p>
-        <p><strong>The Investor: Dai Truong </strong> He joined <a href="http://www.austinventures.com/">Austin Ventures</a> in 2013 and focuses on early-stage and expansion-stage investing. Prior to joining AV, Dai was a Senior Analyst in the Technology Investment Banking group at Bank of America Merrill Lynch where he focused on Internet, digital media, software, hardware, communications equipment, and semiconductor companies.</p>
+        <p><strong>The Investor: Dai Truong </strong> He joined <a href="http://www.austinventures.com/">Austin Ventures</a>u in 2013 and focuses on early-stage and expansion-stage investing. Prior to joining AV, Dai was a Senior Analyst in the Technology Investment Banking group at Bank of America Merrill Lynch where he focused on Internet, digital media, software, hardware, communications equipment, and semiconductor companies.</p>
         <p><strong>The Digital Dating Expert: Lori Cheek</strong>Architect turned Entrepreneur, Founder and CEO of <a href="cheekd.com">Cheekd.com</a> -- the reverse engineered dating site coined by the New York Times as "the next generation of online dating." Lori, recently listed on the American Express Open Forum as "The Digital Dating Disruptor" and "One of the Top 10 CEOs to Watch in 2013," was just featured on ABC's Shark Tank pitching her million dollar idea, Cheek'd, which makes introducing yourself to an intriguing stranger less intimidating by combining the charm of witty, old school calling cards with the power of the Internet.</p>
         <p><strong>The License Specialist: Wolfang Senges</strong><a href="http://c3s.cc">The Cultural Commons Collecting Society (C3S)</a> is the next generation of music collecting societies. Open, fair, cross-border, enabling a new market. Embracing open tech and non-exclusive licensing: Creative Commons (some richts reserved) and all rights reserved licensing.</p>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
@@ -216,11 +216,12 @@
         <div class="ss-item ss-navigate">
         <input type="submit" name="submit" value="Submit" id="ss-submit">
         </div></ol></form></div>
-        <div class='dottedline'><h1>Prizes</h1></div>
+        <div class='dottedline'><h1>Prizes...</h1></div>
         <p>
-          All participants will get the chance to present themselves in front of over 200 Techies, Founders, VCs! If you couldn't find your partner on the stage, you will find her or him in the crowd!<br/>
-          The winner of each round will win a "candle-light" dinner with the favored one in a romantic location in Cologne.
+          Love is all you need. All Dating Game participants will get the chance to win a summer startup stay in Germany, including plenty of coworking, networking and business opportunities as well as vouchers for the leading local tech and startup events, conferences and hackthons. We will introduce you to our local community and of course to our awesome sponsors:
         </p>
+        <p><strong>A 30 Min. chat with <a href="">Torsten Krug</a></strong>Founder and CEO of SWAB - well connected matchmaker to the Old Economy for entrepreneurs</p>
+        <p><strong>A 30 Min. candlelight dinner with <a href='https://twitter.com/bibrue' target='_blank'>Jörg Binnenbrücker</a></strong>Founder and CEO of Capnamic - an established Venture Capitalist in NRW</p>
         <div class='dottedline'><h1>Your Hosts</h1></div>
         <p>
           <ul class='talks'>
@@ -250,15 +251,6 @@
                 <a href='http://twitter.com/koos' target='_blank'>@koos</a>
               </div>
               <div class='topic'>Shieeeet</div>
-            </li>
-            <li>
-              <div class='name'>Jack's assistant</div>
-              <div class='avatar' style="background-image: url('images/tobias.jpg')"></div>
-              <div class='name'>Tobias Schiwek</div>
-              <div class='handle'>
-                <a href='http://twitter.com/TobiasSchiwek' target='_blank'>@tobiasschiwek</a>
-              </div>
-              <div class='topic'>Doubble Shieeeet</div>
             </li>
           </ul>
         </p>
