--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
         </p>
         <p><strong>A 30 Min. chat with <a href="">Torsten Krug</a></strong>Founder and CEO of SWAB - well connected matchmaker to the Old Economy for entrepreneurs</p>
         <p><strong>A 30 Min. candlelight dinner with <a href='https://twitter.com/bibrue' target='_blank'>Jörg Binnenbrücker</a></strong>Founder and CEO of Capnamic - an established Venture Capitalist in NRW</p>
+        <p><strong>A 3 month scholarschip worth 2000$ at <a href='https://twitter.com/startplatz' target='_blank'>Startplatz</a></strong>Startplatz is one of the biggest startup incubators in germany</p>
         <div class='dottedline'><h1>Your Hosts</h1></div>
         <p>
           <ul class='talks'>
