--- a/index.html
+++ b/index.html
@@ -220,13 +220,19 @@
         <p>
           Love is all you need. All Dating Game participants will get the chance to win a summer startup stay in Germany, including plenty of coworking, networking and business opportunities as well as vouchers for the leading local tech and startup events, conferences and hackthons. We will introduce you to our local community and of course to our awesome sponsors:
         </p>
-        <p style="center"><strong>A 30 Min. chat with <a href="">Torsten Krug</a></strong>Founder and CEO of SWAB - well connected matchmaker to the Old Economy for entrepreneurs</p>
-        <p><strong>A 30 Min. candlelight dinner with <a href='https://twitter.com/bibrue' target='_blank'>Jörg Binnenbrücker</a></strong>Founder and CEO of Capnamic - an established Venture Capitalist in NRW</p>
-        <p><strong>A 3 month scholarschip worth 2,000$ at <a href='https://twitter.com/startplatz' target='_blank'>Startplatz</a></strong>Startplatz is one of the biggest startup incubators in germany</p>
+        <p style="center"><strong>A 30 Min. chat with <a href="">Torsten Krug</a></strong> Founder and CEO of SWAB - well connected matchmaker to the Old Economy for entrepreneurs</p>
+        <p><strong>A 30 Min. candlelight dinner with <a href='https://twitter.com/bibrue' target='_blank'>Jörg Binnenbrücker</a></strong> Founder and CEO of Capnamic - an established Venture Capitalist in NRW</p>
+        <p><strong>A 3 month scholarschip worth 2,000$ at <a href='https://twitter.com/startplatz' target='_blank'>Startplatz</a></strong> Startplatz is one of the biggest startup incubators in germany</p>
+        <p><strong>Festival and Day Pass Tickets for the <a href='https://interactive-cologne.com' target='_blank'>Interactive Cologne Festival</a> worth 1,000$</strong> Interactive Cologne (May 19 - 25, in Cologne Germany) is one of the biggest creativity and digital media festival in Germany for business people, startups and the developer community. Festival Dates: May 19 - 25.</p>
+        <p><strong>Tickets for the <a href='http://piratesummit.com/' target='_blank'>European Pirate Summit</a> worth 700$</strong>The European Pirate Summit (August 2014 in Cologne Germany) - the craziest startup and VC conference</p>
+        <p><strong><a href='https://twitter.com/rackspace' target='_blank'>Rackspace</a> Startup cloud products worth 3,000$ </strong>Rackspace - Build Scalable Websites & Apps</p>
         <ul class="sponsors">
           <li><a href="http://capnamic.com"><img width="258px" src="images/supporter/capnamic_logo.png" /></a></li>
           <li><a href="http://startplatz.de"><img width="258px" src="images/supporter/startplatz.jpeg" /></a></li>
           <li><a href="http://swab.de"><img width="258px" src="images/supporter/swab_logo.gif" /></a></li>
+          <li><a href="http://interactive-cologne.com"><img width="258px" src="images/supporter/interactive_cologne.jpg" /></a></li>
+          <li><a href="http://piratesummit.com"><img width="258px" src="images/supporter/eps.jpg" /></a></li>
+          <li><a href="http://rackspace.com"><img width="258px" src="images/supporter/rackspace.jpg" /></a></li                              
         </ul>
         <div class='dottedline'><h1>Your Hosts</h1></div>
         <p>
