added more prizes

--- a/index.html
+++ b/index.html
@@ -226,14 +226,17 @@
         <p><strong>Festival and Day Pass Tickets for the <a href='https://interactive-cologne.com' target='_blank'>Interactive Cologne Festival</a> worth 1,000$</strong> Interactive Cologne (May 19 - 25, in Cologne Germany) is one of the biggest creativity and digital media festival in Germany for business people, startups and the developer community. Festival Dates: May 19 - 25.</p>
         <p><strong>Tickets for the <a href='http://piratesummit.com/' target='_blank'>European Pirate Summit</a> worth 700$</strong>The European Pirate Summit (August 2014 in Cologne Germany) - the craziest startup and VC conference</p>
         <p><strong><a href='https://twitter.com/rackspace' target='_blank'>Rackspace</a> Startup cloud products worth 3,000$ </strong>Rackspace - Build Scalable Websites & Apps</p>
+        <p><strong>Webdevelopment coding power and support by <a href='https://twitter.com/railslove' target='_blank'>Railslove</a> worth 2,000$ </strong>We love building web applications - need help?</p>
         <ul class="sponsors">
           <li><a href="http://capnamic.com"><img width="258px" src="images/supporter/capnamic_logo.png" /></a></li>
           <li><a href="http://startplatz.de"><img width="258px" src="images/supporter/startplatz.jpeg" /></a></li>
           <li><a href="http://swab.de"><img width="258px" src="images/supporter/swab_logo.gif" /></a></li>
           <li><a href="http://interactive-cologne.com"><img width="258px" src="images/supporter/interactive_cologne.jpg" /></a></li>
           <li><a href="http://piratesummit.com"><img width="258px" src="images/supporter/eps.jpg" /></a></li>
-          <li><a href="http://rackspace.com"><img width="258px" src="images/supporter/rackspace.jpg" /></a></li                              
+          <li><a href="http://rackspace.com"><img width="258px" src="images/supporter/rackspace.jpg" /></a></li>
+          <li><a href="http://railslove.com"><img width="258px" src="images/supporter/railslove.jpg" /></a></li>
         </ul>
+        <br/><br/>
         <div class='dottedline'><h1>Your Hosts</h1></div>
         <p>
           <ul class='talks'>
