renamed the priate summit

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <li><a href="http://startplatz.de"><img width="258px" src="images/supporter/startplatz.jpeg" /></a></li>
           <li><a href="http://swab.de"><img width="258px" src="images/supporter/swab_logo.gif" /></a></li>
           <li><a href="http://interactive-cologne.com"><img width="258px" src="images/supporter/interactive_cologne.jpg" /></a></li>
-          <li><a href="http://piratesummit.com"><img width="258px" src="images/supporter/eps.jpg" /></a></li>
+          <li><a href="http://piratesummit.com"><img width="258px" src="images/supporter/piratesummit.jpg" /></a></li>
           <li><a href="http://rackspace.com"><img width="258px" src="images/supporter/rackspace.jpg" /></a></li>
           <li><a href="http://railslove.com"><img width="258px" src="images/supporter/railslove.jpg" /></a></li>
         </ul>
