--- a/index.html
+++ b/index.html
@@ -227,11 +227,13 @@
         <p><strong>Tickets for the <a href='http://piratesummit.com/' target='_blank'>European Pirate Summit</a> worth 700$</strong>The European Pirate Summit (August 2014 in Cologne Germany) - the craziest startup and VC conference</p>
         <p><strong><a href='https://twitter.com/rackspace' target='_blank'>Rackspace</a> Startup cloud products worth 3,000$ </strong>Rackspace - Build Scalable Websites & Apps</p>
         <p><strong>Webdevelopment coding power and support by <a href='https://twitter.com/railslove' target='_blank'>Railslove</a> worth 2,000$ </strong>We love building web applications - need help?</p>
+       <p><strong>An image or company or product trailer powered by <a href='http://ufa-lab.com' target='_blank'>Ufa Lab</a> worth 10,000$ </strong>UFA LAB is digital production unit of UFA and content lab for innovative, transmedia storytelling</p> 
         <ul class="sponsors">
-          <li><a href="http://capnamic.com"><img width="258px" src="images/supporter/capnamic_logo.png" /></a></li>
+          <li><a href="http://ufa-lab.com"><img width="258px" src="images/supporter/ufalab.png" /></a></li>
           <li><a href="http://startplatz.de"><img width="258px" src="images/supporter/startplatz.jpeg" /></a></li>
           <li><a href="http://swab.de"><img width="258px" src="images/supporter/swab_logo.gif" /></a></li>
           <li><a href="http://interactive-cologne.com"><img width="258px" src="images/supporter/interactive_cologne.jpg" /></a></li>
+          <li><a href="http://capnamic.com"><img width="258px" src="images/supporter/capnamic_logo.png" /></a></li>
           <li><a href="http://piratesummit.com"><img width="258px" src="images/supporter/piratesummit.jpg" /></a></li>
           <li><a href="http://rackspace.com"><img width="258px" src="images/supporter/rackspace.jpg" /></a></li>
           <li><a href="http://railslove.com"><img width="258px" src="images/supporter/railslove.jpg" /></a></li>
