Add placeholder images

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
         <div class='dottedline'><h1>Candidates</h1></div>
         <h2 id="round1">Round 1 - VC vs. Founder Founder Founder</h2>
         <p>
-          <ul class='talks'>
+          <ul class='talks candidates'>
             <li>
               <div class='name'>The Investor</div>
-              <div class='avatar' style="background-image: url('images/investor.gif')"></div>
+              <div class='avatar' style="background-image: url('images/investor2.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -124,7 +124,7 @@
             </li>
             <li>
               <div class='name'>Awesome Founder</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='avatar' style="background-image: url('images/founder1.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -132,7 +132,7 @@
             </li>
             <li>
               <div class='name'>Another Founder</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='avatar' style="background-image: url('images/founder2.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -140,7 +140,7 @@
             </li>
             <li>
               <div class='name'>And You?</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='avatar' style="background-image: url('images/founder3.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -158,10 +158,10 @@
 
         <h2 id="round2">Round 2 - CTO vs. Founder Founder Founder</h2>
         <p>
-          <ul class='talks'>
+          <ul class='talks candidates'>
             <li>
               <div class='name'>Tech Expert</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='avatar' style="background-image: url('images/cto.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -169,7 +169,7 @@
             </li>
             <li>
               <div class='name'>Startup BIZ</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='avatar' style="background-image: url('images/founder4.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -177,7 +177,7 @@
             </li>
             <li>
               <div class='name'>Hipster COM</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='avatar' style="background-image: url('images/founder5.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -185,7 +185,7 @@
             </li>
             <li>
               <div class='name'>Your Idea?</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='avatar' style="background-image: url('images/founder6.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -203,10 +203,10 @@
 
         <h2 id="round2">Round 3 - Founder vs. VC VC VC</h2>
         <p>
-          <ul class='talks'>
+          <ul class='talks candidates'>
             <li>
               <div class='name'>Awesome Founder</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='avatar' style="background-image: url('images/founder.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -214,7 +214,7 @@
             </li>
             <li>
               <div class='name'>Investor I</div>
-              <div class='avatar' style="background-image: url('images/investor.gif')"></div>
+              <div class='avatar' style="background-image: url('images/investor1.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -222,7 +222,7 @@
             </li>
             <li>
               <div class='name'>Investor II</div>
-              <div class='avatar' style="background-image: url('images/investor.gif')"></div>
+              <div class='avatar' style="background-image: url('images/investor2.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -230,7 +230,7 @@
             </li>
             <li>
               <div class='name'>Investor III</div>
-              <div class='avatar' style="background-image: url('images/investor.gif')"></div>
+              <div class='avatar' style="background-image: url('images/investor3.png')"></div>
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -356,7 +356,7 @@
           We'll bring you back to this time. We are not searching for farmers or daughters-in-law - we present you the best and only CTO's, founders and VC's you need to meet! Three rounds full of fun, insights and great matches. Meet your CTO! Meet your Startup! Meet your VC!
         </p>
         <p>
-          <iframe width="100%" height="400" src="http://www.youtube.com/embed/5J3FUOCRXPo" frameborder="0" allowfullscreen></iframe>
+          <iframe width="100%" height="400" src="http://www.youtube.com/embed/5J3FUOCRXPo" frameborder="0" allowfullscreen style="padding-bottom: 20px;"></iframe>
         </p>
       </section>
       <section class='impressions' id='impressions'>
@@ -557,7 +557,6 @@
           </ul>
         </p>
         <div class='dottedline'><h1>Past Hosts</h1></div>
-        <p>
           <ul class='talks'>
             <li>
               <div class='name'>The irresistible</div>
@@ -587,7 +586,6 @@
               <div class='topic'>Shieeeet</div>
             </li>
  -->          </ul>
-        </p>
       </section>
 <!--       <section class='host' id='host'>
         <div class='dottedline'><h1>Become a host and organize your own dating game</h1></div>
