--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
   </head>
   <body>
     <div class='banner'>
+      <img src='./images/banner_create_nrw_interactive_cologne.png'/>
       <a href="https://www.facebook.com/events/345037262302685" target='_blank'>
       <img src='./images/banner_only_cologne_2014.png'/>
+      </a>
+    </div>
+    <div class="tickets">
+      <a href="http://2014.interactive-cologne.com/tickets">
+        <img src="/images/ic14-lay-tickets-btn.png" alt="Tickets"/>
       </a>
     </div>
     <header>
@@ -60,7 +66,6 @@
         </ul>
         <p>Hand-picked startups meet high-class investors in the most candid way: Questions never asked before reveal insights never given before. Who’s the perfect match for you?<br/>
         Join our event series that has already made dreams come true for so many founders and investors: Matchmaking with inspiring people in a creative and fun environment. An insane mixture of German efficiency and atypical German fun.</p>
-        <p>More information about the "Interactive Dating Game" and the whole program, feat. +Ken Doctor, +Cory Haik, +Ulrike Langer and other fab experts, visit <a href="http://2014.interactive-cologne.com/">interactive-cologne.com</a></p>
         <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-7.jpg'>
         <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-2.jpg'>
       </section>
@@ -111,7 +116,7 @@
       </section>
       <section class='talks' id='candidates'>
         <div class='dottedline'><h1>Candidates</h1></div>
-        <h2 id="round1">Round 1 - VC vs. Founder Founder Founder</h2>
+        <h2 id="round1">Round 1 - VC dates Founder</h2>
         <p>
           <ul class='talks candidates'>
             <li>
@@ -156,7 +161,7 @@
           </p>
         -->
 
-        <h2 id="round2">Round 2 - CTO vs. Founder Founder Founder</h2>
+        <h2 id="round2">Round 2 - CTO dates Founder</h2>
         <p>
           <ul class='talks candidates'>
             <li>
@@ -201,7 +206,7 @@
           </p>
         -->
 
-        <h2 id="round2">Round 3 - Founder vs. VC VC VC</h2>
+        <h2 id="round2">Round 3 - Founder dates VC VC VC</h2>
         <p>
           <ul class='talks candidates'>
             <li>
@@ -298,15 +303,6 @@
                 <a href='https://twitter.com/nadia_z' target='_blank'>@nadia_z</a>
               </div>
               <div class='topic'>The empathic brain</div>
-            </li>
-            <li>
-              <div class='name'>The irresistible</div>
-              <div class='avatar' style="background-image: url('images/vidar.jpg')"></div>
-              <div class='name'>Vidar Andersen</div>
-              <div class='handle'>
-                <a href='http://twitter.com/blacktar' target='_blank'>@blacktar</a>
-              </div>
-              <div class='topic'>The engineman</div>
             </li>
             <li>
               <div class='name'>Jack of all trades</div>
@@ -568,6 +564,16 @@
               <div class='topic'>The wonderful</div>
             </li>
             <li>
+              <div class='name'>The irresistible</div>
+              <div class='avatar' style="background-image: url('images/vidar.jpg')"></div>
+              <div class='name'>Vidar Andersen</div>
+              <div class='handle'>
+                <a href='http://twitter.com/blacktar' target='_blank'>@blacktar</a>
+              </div>
+              <div class='topic'>The engineman</div>
+            </li>
+<!--
+            <li>
               <div class='name'>The wonderful</div>
               <div class='avatar' style="background-image: url('images/nadia.jpg')"></div>
               <div class='name'>Nadia Zaboura</div>
@@ -576,7 +582,7 @@
               </div>
               <div class='topic'>The empathic brain</div>
             </li>
-<!--             <li>
+             <li>
               <div class='name'>Jack of all trades</div>
               <div class='avatar' style="background-image: url('images/....jpg')"></div>
               <div class='name'>....</div>
@@ -585,7 +591,8 @@
               </div>
               <div class='topic'>Shieeeet</div>
             </li>
- -->          </ul>
+-->
+           </ul>
       </section>
 <!--       <section class='host' id='host'>
         <div class='dottedline'><h1>Become a host and organize your own dating game</h1></div>
@@ -596,9 +603,12 @@
       <section class='copyright'>
         <div class='dottedline'></div>
         <a href='mailto:jan@interactive-cologne.com' target='_blank'>Questions?</a><br/><br/>
-        Proudly brought to you by <a href='http://railslove.com' target='_blank'>Railslove</a>, <a href='http://interactive-cologne.com' target='_blank'>Interactive Cologne</a><br/><br/>
-        Supported by <a href='http://fancaptain.com' target='_blank'>FanCaptain</a>, <a href='http://hmr-international.de/de/' target='_blank'>HMR International</a> &amp; <a href='http://www.wirtschaft.nrw.de/' target='_blank'>Ministerium für Wirtschaft, Energie, Industrie, Mittelstand und Handwerk
-des Landes Nordrhein-Westfalen</a><br /><br/>
+        Proudly brought to you by <a href='http://railslove.com' target='_blank'><img src="/images/railslove-logo.png" alt="railslove" style="vertical-align: middle; padding: 0 5px 10px 5px;" /></a> &amp; <a href='http://interactive-cologne.com' target='_blank'><img src="/images/interactive-cologne.png" alt="Interactive Cologne" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a><br/><br/>
+        Supported by
+        
+        <a href="http://www.creative.nrw.de/" target="_blank"><img src="/images/creative-nrw.png" alt="CREATIVE NRW" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a> &amp;
+        <a href="http://www.supr.com/" target="_blank"><img src="/images/supr.png" alt="supr.com" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a>
+        <br /><br/>
         Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades</a><br /><br/>
       </section>
 
