--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="tickets">
       <a href="http://2014.interactive-cologne.com/tickets">
-        <img src="/images/ic14-lay-tickets-btn.png" alt="Tickets"/>
+        <img src="./images/ic14-lay-tickets-btn.png" alt="Tickets"/>
       </a>
     </div>
     <header>
@@ -295,6 +295,15 @@
         <div class='dottedline'><h1>Your Hosts</h1></div>
         <p>
           <ul class='talks'>
+            <li>
+              <div class='name'>The irresistible</div>
+              <div class='avatar' style="background-image: url('images/felix.jpg')"></div>
+              <div class='name'>Felix Schlebusch</div>
+              <div class='handle'>
+                <a href='https://twitter.com/FelixSchlebusch' target='_blank'>@FelixSchlebusch</a>
+              </div>
+              <div class='topic'>The empathic brain</div>
+            </li>
             <li>
               <div class='name'>The wonderful</div>
               <div class='avatar' style="background-image: url('images/nadia.jpg')"></div>
