--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title>The Interactive Dating Game with Nadia Zaboura and Vidar Andersen - brought to you by Jan Kus and Interactive Cologne</title>
     <meta charset='utf-8'>
     <script src='./javascripts/jquery-1.9.1.min.js'></script>
+    <script src='./javascripts/slick.min.js'></script>
     <script src='./javascripts/application.js'></script>
     <link href='./stylesheets/application.css' rel='stylesheet'>
+    <link href='./stylesheets/slick.css' rel='stylesheet'>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   </head>
   <body>
@@ -56,6 +58,13 @@
     </header>
     <div class='inhalt'>
       <section class='about' id='about'>
+        <div class="quotes">
+          <div><blockquote style="margin: 2em 0;">This is truly SXSW - and an amazing example of how famous TV Formats can find their way into startup events</blockquote><div>Martina Richter (HMR)</div></div>
+          <div><blockquote style="margin: 2em 0;">The Interactive Dating Game perfectly fits the unique SXSW atmosphere - it's entertaining, it's sexy and it's unpredictable.</blockquote> <div>Claudia Pelzer (Ufa Lab)</div></div>
+          <div><blockquote style="margin: 0em 0;">Mit dem Interactive Dating Game hat sich NRW bei der SXSW von seiner besten Seite gezeigt: Selbstbewusst, heiter, fantasievoll, vielfältig, erfolgreich und weltoffen. Die Macher haben rund um das Format ein dichtes Netz an guten Kontakten geknüpft. Das Interactive Dating Game war ein echter Publikumsmagnet für das German Haus in Austin.</blockquote> <div>Claudia Nussbauer (MWEIMH)</div></div>
+          <div><blockquote style="margin: 1.5em 0;">Finally an event beyond common pitches that focuses on the core of it all: personal talks. It's awesome. It's real fun. A big thank you to the Interactive Dating Game Team and the sponsors who provided C3S with some generous prizes!</blockquote> <div>Wolfang Senges (c3S)</div></div> 
+        </div>
+
         <div class="dottedline"><h1>About</h1></div>
         <p>The government of Germany´s biggest state, located at the heart of Europe, North Rhine-Westphalia (NRW), fosters creative companies and entrepreneurs. A delegation of the government, selected, established entrepreneurs, investors and media professionals will give you happily a warm welcome.</p>
         <p>An event like German beer:</p>
