Load gallery images lazy (and hide some images)

--- a/index.html
+++ b/index.html
@@ -379,31 +379,33 @@
           <div><iframe src="http://www.youtube.com/embed/tS_2sAGYI-Q" frameborder="0" allowfullscreen></iframe></div>
           <div><iframe src="http://www.youtube.com/embed/snfx-F24gnQ" frameborder="0" allowfullscreen></iframe></div>
 
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_160945.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_161155.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_161243.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_161359.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_1613591.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_161514.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_161701.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_161838.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_162314.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140309_163715.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140310_133054.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140310_133419.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140310_133606.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140310_133615.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140310_133651.jpg"></div>
-          <div><img alt="Dating Game @ SXSW 2014" src="images/sxsw-2014/IMG_20140310_135637.jpg"></div>
+          <!--
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_160945.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_161155.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_161243.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_161359.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_1613591.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_161514.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_161701.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_161838.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_162314.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140309_163715.jpg"></div>
+          -->
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140310_133054.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140310_133419.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140310_133606.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140310_133615.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140310_133651.jpg"></div>
+          <div><img alt="Dating Game @ SXSW 2014" data-lazy="images/sxsw-2014/IMG_20140310_135637.jpg"></div>
 
-          <div><img alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-cologne-2013/interactive-dating-game-7.jpg'></div>
-          <div><img alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-cologne-2013/interactive-dating-game-2.jpg'></div>
-          <div><img alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-cologne-2013/interactive-dating-game-4.jpg'></div>
-          <div><img alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-cologne-2013/interactive-dating-game-5.jpg'></div>
-          <div><img alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-cologne-2013/interactive-dating-game-8.jpg'></div>
-          <div><img alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-cologne-2013/interactive-dating-game-10.jpg'></div>
-          <div><img alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-cologne-2013/interactive-dating-game-11.jpg'></div>
-          <div><img alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-cologne-2013/interactive-dating-game-13.jpg'></div>
+          <div><img alt='Dating Game @ Interactive Cologne 2013' data-lazy='images/interactive-cologne-2013/interactive-dating-game-7.jpg'></div>
+          <div><img alt='Dating Game @ Interactive Cologne 2013' data-lazy='images/interactive-cologne-2013/interactive-dating-game-2.jpg'></div>
+          <div><img alt='Dating Game @ Interactive Cologne 2013' data-lazy='images/interactive-cologne-2013/interactive-dating-game-4.jpg'></div>
+          <div><img alt='Dating Game @ Interactive Cologne 2013' data-lazy='images/interactive-cologne-2013/interactive-dating-game-5.jpg'></div>
+          <div><img alt='Dating Game @ Interactive Cologne 2013' data-lazy='images/interactive-cologne-2013/interactive-dating-game-8.jpg'></div>
+          <div><img alt='Dating Game @ Interactive Cologne 2013' data-lazy='images/interactive-cologne-2013/interactive-dating-game-10.jpg'></div>
+          <div><img alt='Dating Game @ Interactive Cologne 2013' data-lazy='images/interactive-cologne-2013/interactive-dating-game-11.jpg'></div>
+          <div><img alt='Dating Game @ Interactive Cologne 2013' data-lazy='images/interactive-cologne-2013/interactive-dating-game-13.jpg'></div>
 
           <div><iframe src="http://www.youtube.com/embed/wObJGrpk53s" frameborder="0" allowfullscreen></iframe></div>
           <div><iframe src="http://www.youtube.com/embed/J2NkjOs_UMg" frameborder="0" allowfullscreen></iframe></div>
